self-hosted-services/memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos-service
  namespace: memos
  labels:
    app.kubernetes.io/name: memos
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5230
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: memos
